--- a/css/styles.css
+++ b/css/styles.css
@@ -2,27 +2,65 @@
 
 /* Import declaration to use Google Fonts - check https://fonts.google.com/ for details */
 @import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,400;0,700;1,400;1,700&display=swap');
-
+@import url('https://fonts.googleapis.com/css2?family=IM+Fell+DW+Pica&family=Inconsolata:wght@200..900&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 /* Styles for the body */
 
 body {
-	font-family: Lato, "Open Sans", Roboto, "Segoe UI", "Helvetica Neue", Helvetica, Arial, sans-serif;
+	font-family: "Poppins", sans-serif;
+	font-weight: 350;
 	color: #202030;
-	background-color: #f8f8fc;
+	background-color: #fae7c9;
 }
 
 /* Styles for custom classes in the document. (There are more, try to find them out!) */
 
 .resume-header {
-    background-color: #e0f0ff;
+    background-color: #b0926a; 
 }
 
 .resume-main {
-	background-color: #fffefc;
+	background-color: #fae7c9;
 }
 
 .resume-aside {
-	background-color: #fff0e0;
+	background-color: #e1cd8f;
+}
+
+.poppins-regular {
+	font-family: "Poppins", sans-serif;
+	font-weight: 400;
+	color: #fae7c9;
+	font-style: normal;
+}
+
+.poppins-light-italic {
+	font-family: "Poppins", sans-serif;
+	font-weight: 300;
+	font-style: italic;
+	color: #fae7c9;
+	font-size: 18px
+  }
+
+  h2 {
+	font-family: "Poppins", sans-serif;
+	font-weight: 400;
+	font-size: 25px;
+  }
+
+  h4 {
+	font-family: "Poppins", sans-serif;
+	font-weight: 400;
+	font-size: 20px;
+  }
+
+  h5 {
+	font-family: "Poppins", sans-serif;
+	font-size: 15px;
+	font-weight: 500;
+  }
+
+.changecolorbar {
+	background-color:#fae7c9;
 }
 
 /* Styles for lists in the document */
@@ -36,7 +74,7 @@ body {
 }
 
 .biography-details li::before {
-	color: #EE7623;
+	color: #706134;
 }
 
 .biography-details li, .skill-list li {
@@ -49,3 +87,4 @@ body {
 	height: 1em;
 	flex-basis: 1.4em;
 }
+
