--- a/css/styles.css
+++ b/css/styles.css
@@ -27,6 +27,8 @@ body {
 	background-color: #e1cd8f;
 }
 
+/*class poppins font, font colour change*/
+
 .poppins-regular {
 	font-family: "Poppins", serif;
 	font-weight: 400;
@@ -34,6 +36,7 @@ body {
 	font-style: normal;
 }
 
+/* class for my description on the top "Your expert..."*/
 .poppins-light-italic {
 	font-family: "Poppins", sans-serif;
 	font-weight: 300;
@@ -67,6 +70,8 @@ body {
 	font-style: italic;
   }
 
+/*my custom classess: font colour change, font change*/
+
 .changecolorbar {
 	background-color:#fae7c9;
 }
@@ -79,6 +84,8 @@ body {
 	margin-bottom: 2%;
 }
 
+.progressborder {border: 1px solid #706134;
+}
 
 /* Styles for lists in the document */
 
